[gd_scene load_steps=24 format=2]

[ext_resource path="res://Characters/Zombie.gd" type="Script" id=1]
[ext_resource path="res://Images/zombie/enemy-zombie-walk.png" type="Texture" id=2]
[ext_resource path="res://Images/zombie/enemy-zombie-attack.png" type="Texture" id=3]
[ext_resource path="res://Images/zombie/enemy-zombie-idle.png" type="Texture" id=4]
[ext_resource path="res://Images/zombie/enemy-die-poof.png" type="Texture" id=5]
[ext_resource path="res://Characters/UI/HealthBar.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=14]
radius = 14.6072
height = 2.61852

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 35, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 70, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 105, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 35, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 70, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 105, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 35, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 70, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 105, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 33, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 33, 0, 33, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 66, 0, 33, 48 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
} ]

[node name="Zombie" type="KinematicBody2D"]
position = Vector2( 0.418106, 0 )
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 14 )

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
margin_left = -7.14762
margin_top = -21.9684
margin_right = 23.8524
margin_bottom = -15.9684

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 26 )
animation = "Idle"
[connection signal="health_updated" from="." to="HealthBar" method="on_health_updated"]
[connection signal="killed" from="." to="." method="_on_Zombie_killed"]
[connection signal="melee" from="." to="." method="_on_Zombie_melee"]
